--- a/README.rdoc
+++ b/README.rdoc
@@ -1,162 +1,108 @@
-= SchemaPlus
+= SchemaValidations
 
 == Overview
 
-SchemaPlus is an ActiveRecord extension that provides enhanced capabilities for schema definition and querying, including: enhanced and more DRY index capabilities, support and automation for foreign key constraints, and support for views.
+One of the great things about Rails (ActiveRecord, in particular) is that it
+inspects the database and automatically defines accessors for all your
+columns, keeping your model class definitions simple and DRY.  That's great
+for simple data columns, but where it falls down is when your table
+contains constraints.
 
-For added rails DRYness see also the gems
-{+schema_associations+}[http://rubygems.org/gems/schema_associations] and
-{+schema_validations+}[http://rubygems.org/gems/schema_associations]
-<b>IMPORTANT PRERELEASE NOTE: <i>schema_validations is not yet separate
-gems, it's currently bundled in here.  It's not documented yet though.</i></b>
+    create_table :users do |t|
+      t.string :email, :null => false, :limit => 30
+      t.boolean :confirmed, :null => false
+    end
 
-== Compatibility
+In that case +:null => false+, +:limit => 30+ and +:boolean+ must be covered on the model level.
 
-SchemaPlus supports all combinations of:
-* rails 3.0 or 3.1
-* MRI ruby 1.8.7 or 1.9.2
-* PostgreSQL, MySQL (using mysql or mysql2 gem), or Sqlite3
+    class User < ActiveRecord::Base
+      validates :email, :presence => true, :length => 30
+      validates :confirmed, :presence => true, :inclusion => { :in => [true, false] }
+    end
+
+...which isn't the most DRY approach.
+
+SchemaValidations aims to cover that and does boring work for you. It inspect
+the database and automatically creates validations basing on the schema. After
+installing it your model is as simple as it can be.
+
+    class User < ActiveRecord::Base
+    end
+
+Validations are there but they are created by schema_validations under the hood.
 
 == Installation
 
-Install from http://rubygems.org via
+Simply add schema_validations to your Gemfile.
 
-        $ gem install "schema_plus"
+    gem "schema_validations"
 
-or in a Gemfile
+== What if I want something special?
 
-        gem "schema_plus"
+SchemaValidations is highly customizable. You can configure certain
+auto-validations globally or per-model.
 
-== Features
-
-Here some examples that show off the high points.  For full details see the
-{RDoc documentation}[http://rubydoc.info/gems/schema_plus].
-
-=== Indexes
-
-With standard rails migrations, you specify indexes separately from the table definition:
-
-    # Standard Rails approach...
-    create_table :parts do |t|
-      t.string :name
-      t.string :product_code
+    class User < ActiveRecord::Base
+      schema_validations :except => :email
+      validates :email, :presence => true, :length => { :in => 5..30 }
     end
 
-    add_index :parts, :name     # index repeats table and column names and is defined separately
-    add_index :parts, :product_code, :unique => true
+For full details see the {RDoc documentation}[http://rubydoc.info/gems/schema_validations]
 
-But with SchemaPlus rather than specify your outside your table definition you can specify your indexes when you define each column:
+== Which validations are covered?
 
-    # More DRY way...
-    create_table :parts do |t|
-      t.string :name,           :index => true
-      t.string :product_code,   :index => :unique
-    end
+Constraints:
 
-Options can be provided index using a hash, for example:
+|      Database      |          Model                                   |
+-------------------------------------------------------------------------
+| +:null => false+   | +validates ... :presence => true                 |
+| +:limit => 100+    | +validates ... :length => { :maximum => 100 }    |
+| +:unique => true+  | +validates ... :uniqueness => true               |
 
-    t.string :product_code,     :index => { :unique => true, :name => "my_index_name" }
+Data types:
 
-You can also create multi-column indexes, for example:
+|      Database      |          Model                                            |
+----------------------------------------------------------------------------------
+| :boolean           | :validates ... :inclusion => { :in => [true, false] }     |
+| :float             | :validates ... :numericality => true                      |
+| :integer           | :validates ... :numericality => { :only_integer => true } |
 
-    t.string :first_name
-    t.string :last_name,        :index => { :with => :first_name }
+== Compatibility
 
-    t.string :country_code
-    t.string :area_code
-    t.string :local_number      :index => { :width => [:country_code, :area_code], :unique => true }
+SchemaValidations supports all combinations of:
+* rails 3.0 or 3.1
+* MRI ruby 1.8.7 or 1.9.2
+* PostgreSQL, MySQL, or Sqlite3
 
-If you're using Postgresql, SchemaPlus provides support for conditions, expressions, index methods, and case-insensitive indexes; see doc at SchemaPlus::ActiveRecord::ConnectionAdapters::PostgresqlAdapter and SchemaPlus::ActiveRecord::ConnectionAdapters::IndexDefinition
+== How do I know what it did?
+TODO
 
-And when you query column information using ActiveRecord::Base#columns, SchemaPlus analogously provides index information relevant to each column: which indexes reference the column, whether the column must be unique, etc.  See doc at SchemaPlus::ActiveRecord::ConnectionAdapters::Column
-
-=== Foreign Key Constraints
-
-SchemaPlus adds support for foreign key constraints. In fact, for the
-common convention that you name a column with suffix +_id+ to indicate that
-it's a foreign key, SchemaPlus automatically defines the appropriate
-constraint.
-
-You can explicitly specify foreign key constraints, or override the
-automatic ones, using the +:references+ option to specify the table
-name (and optionally that table's key column name, if it's not +id+).
-
-Here are some examples:
-
-    t.integer :author_id                                 # automatically references table 'authors', key id
-    t.integer :parent_id                                 # special name parent_id automatically references its own table (for tree nodes)
-    t.integer :author, :references => :authors           # non-conventional column name needs :references for a constraint
-    t.integer :author_id, :refences => :authors          # same as automatic behavior
-    t.integer :author_id, :refences => [:authors, :id]   # same as automatic behavior
-    t.integer :author_id, :references => :people         # override table name
-    t.integer :author_id, :references => [:people, :ssn] # override table name and key
-    t.integer :author_id, :referencs => nil              # don't create a constraint
-
-
-You can also modify the behavior using +:on_delete+, +:on_update+, and +:deferrable+
-
-    t.integer :author_id, :on_delete => :cascade
-
-The foreign key behavior can be configured globally (see Config) or per-table (see create_table).
-
-To examine your foreign key constraints, connection.foreign_keys returns a
-list of foreign key constraints defined for a given table, and
-connection.reverse_foreign_keys returns a list of foreign key constraints
-that reference a given table.  See SchemaPlus::ActiveRecord::ConnectionAdapters::ForeignKeyDefinition.
-
-=== Views
-
-SchemaPlus provides support for creating and dropping views.  For example:
-
-  create_view :uncommented_posts, "SELECT * FROM posts LEFT OUTER JOIN comments ON comments.post_id = posts.id WHERE comments.id IS NULL"
-  drop_view :uncommented_posts
-
-ActiveRecord works with views the same as with ordinary tables.  That is, for the above view you can define
-
-  class UncommentedPosts < ActiveRecord::Base
-  end
-
+== I don't use constraints
+TODO and blame you
 
 == History
 
-* SchemaPlus is derived from several "Red Hill On Rails" plugins
-  originally created by harukizaemon (https://github.com/harukizaemon)
-  with later contributions from 
-  * Michał Łomnicki (https://github.com/mlomnicki)
-  * François Beausoleil (https://github.com/francois)
-  * Greg Barnett (https://github.com/greg-barnett)
-  * Ronen Barzel (https://github.com/ronen)
+* SchemaValidations is derived from the "Red Hill On Rails" plugin
+ schema_validations originally created by harukizaemon
+  (https://github.com/harukizaemon)
 
-* SchemaPlus was created in 2011 by Michal Lomnicki and Ronen Barzel
-
-
+* SchemaValidations was created in 2011 by Michał Łomnicki and Ronen Barzel
 
 == Testing
 
-SchemaPlus is tested using rspec and rvm, with some hackery to test against
-multiple versions of rails and ruby and db adapters.  To run the tests,
-after you've forked & cloned: Make sure you have Postgresql and MySQL
-running.  Create database user "schema_plus" with permissions for database
-"schema_plus_unittest".  Then:
+SchemaValidations is tested using rspec, sqlite3, and rvm, with some
+hackery to test against multiple versions of rails and ruby.  To run the
+full combo of tests, after you've forked & cloned:
 
-  $ cd schema_plus
-  $ bundle install
-  $ rake postgresql:build_databases
-  $ rake mysql:build_databases
+  $ cd schema_validations
   $ ./runspecs --install  # do this once to install gem dependencies for all versions (slow)
   $ ./runspecs # as many times as you like
 
 You can also pick a specific version of rails and ruby to use, such as:
-  $ export SCHEMA_ASSOCIATIONS_RAILS_VERSION
-  $ SCHEMA_ASSOCIATIONS_RAILS_VERSION=3.1
+  $ export SCHEMA_VALIDATIONS_RAILS_VERSION
+  $ SCHEMA_VALIDATIONS_RAILS_VERSION=3.1
   $ rvm use 1.9.2
   $ rake spec
-
-And you can run the specs for a specific adapter:
-  $ rake postgresql:spec # to run postgresql tests only
-  $ rake mysql:spec # to run mysql tests only
-  $ rake mysql2:spec # to run mysql2 tests only
-  $ rake sqlite3:spec # to run sqlite3 tests only
 
 If you're running ruby 1.9.2, code coverage results will be in coverage/index.html -- it should be at 100% coverage.
 
