--- a/README.rdoc
+++ b/README.rdoc
@@ -13,7 +13,7 @@ contains constraints.
       t.boolean :confirmed, :null => false
     end
 
-In that case +:null => false+, +:limit => 30+ and +:boolean+ must be covered on the model level.
+In that case :null => false, :limit => 30 and :boolean must be covered on the model level.
 
     class User < ActiveRecord::Base
       validates :email, :presence => true, :length => 30
@@ -53,16 +53,16 @@ For full details see the {RDoc documentation}[http://rubydoc.info/gems/schema_va
 
 Constraints:
 
-|      Database      |          Model                                   |
--------------------------------------------------------------------------
-| +:null => false+   | +validates ... :presence => true                 |
-| +:limit => 100+    | +validates ... :length => { :maximum => 100 }    |
-| +:unique => true+  | +validates ... :uniqueness => true               |
+|      Database    |          Model                               |
+|------------------|----------------------------------------------|
+| :null => false   | validates ... :presence => true              |
+| :limit => 100    | validates ... :length => { :maximum => 100 } |
+| :unique => true  | validates ... :uniqueness => true            |
 
 Data types:
 
 |      Database      |          Model                                            |
-----------------------------------------------------------------------------------
+|--------------------|-----------------------------------------------------------|
 | :boolean           | :validates ... :inclusion => { :in => [true, false] }     |
 | :float             | :validates ... :numericality => true                      |
 | :integer           | :validates ... :numericality => { :only_integer => true } |
