--- a/README.rdoc
+++ b/README.rdoc
@@ -53,19 +53,19 @@ For full details see the {RDoc documentation}[http://rubydoc.info/gems/schema_va
 
 Constraints:
 
-|      Database    |          Model                               |
-|------------------|----------------------------------------------|
-| :null => false   | validates ... :presence => true              |
-| :limit => 100    | validates ... :length => { :maximum => 100 } |
-| :unique => true  | validates ... :uniqueness => true            |
+    |      Constraint     |                     Validation                           |
+    |---------------------|----------------------------------------------------------|
+    | :null => false      | validates ... :presence => true                          |
+    | :limit => 100       | validates ... :length => { :maximum => 100 }             |
+    | :unique => true     | validates ... :uniqueness => true                        |
 
 Data types:
 
-|      Database      |          Model                                            |
-|--------------------|-----------------------------------------------------------|
-| :boolean           | :validates ... :inclusion => { :in => [true, false] }     |
-| :float             | :validates ... :numericality => true                      |
-| :integer           | :validates ... :numericality => { :only_integer => true } |
+    |         Type       |                      Validation                           |
+    |--------------------|-----------------------------------------------------------|
+    | :boolean           | :validates ... :inclusion => { :in => [true, false] }     |
+    | :float             | :validates ... :numericality => true                      |
+    | :integer           | :validates ... :numericality => { :only_integer => true } |
 
 == Compatibility
 
