--- a/README.rdoc
+++ b/README.rdoc
@@ -130,7 +130,7 @@ full combo of tests, after you've forked & cloned:
   $ ./runspecs --install  # do this once to install gem dependencies for all versions (slow)
   $ ./runspecs # as many times as you like
 
-You can also pick a specific version of rails and ruby to use, such as:
+See <tt>./runspecs --help</tt> for other options.  You can also pick a specific version of rails and ruby to use, such as:
   $ rvm use 1.9.2
   $ export SCHEMA_VALIDATIONS_RAILS_VERSION=3.1
   $ bundle update --local rails
