pin schema_plus version for rails < 3.2, exclude ruby 1.8.7 with schema_plus for rails 3.2

--- a/gemfiles/Gemfile.rails-2.3
+++ b/gemfiles/Gemfile.rails-2.3
@@ -2,3 +2,4 @@ source "http://rubygems.org"
 
 gemspec :path => File.expand_path('../..', __FILE__)
 gem "rails", "~> 2.3"
+gem "schema_plus", "~> 0.4"
